syntax = "proto3";

package auth;

option go_package = "./proto";

service Auth {
  rpc RegisterUser(UserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
  rpc GetUserProfile(UserID) returns (UserProfile);
}

message UserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message UserResponse {
  uint64 user_id = 1;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  uint64 user_id = 1;
  bool authenticated = 2;
}

message UserID {
  uint64 user_id = 1;
}

message UserProfile {
  uint64 user_id = 1;
  string email = 2;
  string name = 3;
}